--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
 <title>SportSee</title>
   </head>
   <body>
-        <div id="root">Hello  </div>
+        <div id="root"></div>
   
   </body>
 </html>
